# RPL

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
ch01-getting-started/: Cargo.toml
ch02-programming-a-guessing-game/: Cargo.toml
ch03-common-programming-concepts/: Cargo.toml
ch04-understanding-ownership/: Cargo.toml
ch05-using-structs-to-structure-related-data/: Cargo.toml
ch06-enums-and-pattern-matching/: Cargo.toml
ch07-packages-crates-and-modules/: Cargo.toml
ch08-common-collections/: Cargo.toml
ch09-error-handling/: Cargo.toml
ch10-generic-types-traits-and-lifetimes/: Cargo.toml
ch11-writing-automated-tests/: Cargo.toml
ch12-an-io-project-building-a-command-line-program/: Cargo.toml
ch13-functional-language-features-iterators-and-closures/: Cargo.toml
ch14-more-about-cargo-and-crates-io/: Cargo.toml
ch15-smart-pointers/: Cargo.toml
ch16-fearless-concurrency/: Cargo.toml
ch17-fundamentals-of-asynchronous-programming-async-await-futures-and-streams/: Cargo.toml
ch18-object-oriented-programming-features/: Cargo.toml
ch19-patterns-and-matching/: Cargo.toml
ch20-advanced-features/: Cargo.toml
ch21-final-project-building-a-multithreaded-web-server/: Cargo.toml
rustlings/: .gitignore  Cargo.toml  rust-analyzer.toml
rustlings/exercises/: README.md
rustlings/exercises/00_intro/: intro1.rs  intro2.rs
rustlings/exercises/01_variables/: variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs  variables6.rs
rustlings/solutions/: README.md
(+87 files in other folders)
